[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/EXP-System-Dialog/Story Editor/Dialog Record/dialog_record.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_color = Color( 0.8, 0.8, 0.8, 0 )
shadow_color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_color = Color( 0.8, 0.8, 0.8, 0 )
shadow_color = Color( 0, 0, 0, 0 )

[node name="Dialog_Record" type="Control"]
anchor_right = 1.0
rect_min_size = Vector2( 0, 28 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 24 )
size_flags_horizontal = 3
color = Color( 1, 1, 1, 0.12549 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox" type="CheckBox" parent="ColorRect/HBoxContainer"]
margin_right = 24.0
margin_bottom = 28.0

[node name="DID_LBL" type="Label" parent="ColorRect/HBoxContainer"]
margin_left = 28.0
margin_top = 7.0
margin_right = 85.0
margin_bottom = 21.0
text = "DID: 101"

[node name="VSeparator" type="VSeparator" parent="ColorRect/HBoxContainer"]
margin_left = 89.0
margin_right = 93.0
margin_bottom = 28.0

[node name="Edit_BTN" type="Button" parent="ColorRect/HBoxContainer"]
margin_left = 97.0
margin_right = 138.0
margin_bottom = 28.0
hint_tooltip = "Edit this dialog record in the Dialog Editor."
text = "EDIT"
flat = true

[node name="VSeparator4" type="VSeparator" parent="ColorRect/HBoxContainer"]
margin_left = 142.0
margin_right = 146.0
margin_bottom = 28.0

[node name="Name_BTN" type="Button" parent="ColorRect/HBoxContainer"]
margin_left = 150.0
margin_right = 200.0
margin_bottom = 28.0
hint_tooltip = "Edit this dialog record in the Dialog Editor."
text = "NAME"
flat = true

[node name="VSeparator2" type="VSeparator" parent="ColorRect/HBoxContainer"]
margin_left = 204.0
margin_right = 208.0
margin_bottom = 28.0

[node name="Group_BTN" type="OptionButton" parent="ColorRect/HBoxContainer"]
margin_left = 212.0
margin_right = 274.0
margin_bottom = 28.0
hint_tooltip = "View groups applied to this dialog record."
text = "TAGS"
flat = true

[node name="VSeparator3" type="VSeparator" parent="ColorRect/HBoxContainer"]
margin_left = 278.0
margin_right = 282.0
margin_bottom = 28.0

[node name="Human_Readable_LineEdit" type="LineEdit" parent="ColorRect/HBoxContainer"]
margin_left = 286.0
margin_right = 476.0
margin_bottom = 28.0
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
text = "Human Readable Description"
expand_to_text_length = true
context_menu_enabled = false
[connection signal="toggled" from="ColorRect/HBoxContainer/CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="pressed" from="ColorRect/HBoxContainer/Edit_BTN" to="." method="_on_Edit_BTN_pressed"]
[connection signal="pressed" from="ColorRect/HBoxContainer/Name_BTN" to="." method="_on_Name_BTN_pressed"]
[connection signal="pressed" from="ColorRect/HBoxContainer/Group_BTN" to="." method="_on_Group_BTN_pressed"]
[connection signal="focus_exited" from="ColorRect/HBoxContainer/Human_Readable_LineEdit" to="." method="_on_Human_Readable_LineEdit_focus_exited"]
[connection signal="text_changed" from="ColorRect/HBoxContainer/Human_Readable_LineEdit" to="." method="_on_Human_Readable_LineEdit_text_changed"]
